--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gathertown-desk-setup",
   "version": "0.1.0",
   "description": "Request a set of accessories for your desk - create an amazon wishlist as you add things to your desk",
-  "main": "dist/index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "tsc -b && node dist/index.js"
   },
