--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Request a set of accessories for your desk - create an amazon wishlist as you add things to your desk",
   "main": "index.ts",
   "scripts": {
-    "start": "tsc -b && node dist/index.js"
+    "start": "npx ts-node index"
   },
   "repository": {
     "type": "git",
@@ -19,14 +19,17 @@
   "homepage": "https://github.com/fundthmcalculus/gathertown-desk-setup#readme",
   "dependencies": {
     "@gathertown/gather-game-client": "32.0.0",
+    "@trinsic/trinsic": "^1.4.0",
+    "@trinsic/okapi": "^1.4.0",
     "isomorphic-ws": "^4.0.1",
     "js-pixel-fonts": "^1.5.0",
     "pathfinding": "^0.4.18",
-    "ws": "^8.4.2"
   },
   "devDependencies": {
+    "@types/google-protobuf": "^3.15.5",
     "@types/node": "^17.0.10",
     "@types/pathfinding": "^0.0.5",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "ts-node": "^10.7.0"
   }
 }
