--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gathertown-desk-setup",
+  "name": "mewmba",
   "version": "0.1.0",
-  "description": "Request a set of accessories for your desk - create an amazon wishlist as you add things to your desk",
+  "description": "Trinsic's digital assistant for gather! A metaverse cat-on-a-roomba!",
   "main": "index.ts",
   "scripts": {
     "start": "npx ts-node index"
@@ -18,12 +18,12 @@
   },
   "homepage": "https://github.com/fundthmcalculus/gathertown-desk-setup#readme",
   "dependencies": {
-    "@gathertown/gather-game-client": "32.0.0",
+    "@gathertown/gather-game-client": "^37.0.1",
     "@trinsic/trinsic": "^1.4.0",
     "@trinsic/okapi": "^1.4.0",
     "isomorphic-ws": "^4.0.1",
     "js-pixel-fonts": "^1.5.0",
-    "pathfinding": "^0.4.18",
+    "pathfinding": "^0.4.18"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.5",
