--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "Trinsic's digital assistant for gather! A metaverse cat-on-a-roomba!",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
-    "start": "npx ts-node index"
+    "start": "node --experimental-specifier-resolution=node --loader ts-node/esm index"
   },
   "repository": {
     "type": "git",
@@ -19,17 +20,18 @@
   "homepage": "https://github.com/fundthmcalculus/gathertown-desk-setup#readme",
   "dependencies": {
     "@gathertown/gather-game-client": "^37.0.1",
-    "@trinsic/trinsic": "^1.4.0",
-    "@trinsic/okapi": "^1.4.0",
+    "@trinsic/trinsic": "^1.6.0-rc1",
+    "@trinsic/okapi": "^1.6.0-rc2",
     "isomorphic-ws": "^4.0.1",
     "js-pixel-fonts": "^1.5.0",
-    "pathfinding": "^0.4.18"
+    "pathfinding": "^0.4.18",
+    "long": "^5.2.0"
   },
   "devDependencies": {
-    "@types/google-protobuf": "^3.15.5",
-    "@types/node": "^17.0.10",
+    "@types/google-protobuf": "^3.15.6",
+    "@types/node": "^17.0.35",
     "@types/pathfinding": "^0.0.5",
-    "typescript": "^4.5.4",
-    "ts-node": "^10.7.0"
+    "typescript": "^4.7.2",
+    "ts-node": "^10.8.0"
   }
 }
