--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
+    "target": "es2017",
+    "module": "ES2022",
     "composite": true,
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
     "esModuleInterop": true,
+    "moduleResolution": "Node",
     "lib": [
       "es2019",
       "dom"
