--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Trinsic's digital assistant for gather! A metaverse cat-on-a-roomba!",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts --chase --player \"***RANDOM***\" --mewmba phillis --mewmba green"
+    "chase": "ts-node index.ts --chase --player \"***RANDOM***\" --mewmba phillis --mewmba green",
+    "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\""
   },
   "repository": {
     "type": "git",
