--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Trinsic's digital assistant for gather! A metaverse cat-on-a-roomba!",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts"
+    "chase": "ts-node index.ts --chase --player \"***RANDOM***\" --mewmba phillis --mewmba green",
+    "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\""
   },
   "repository": {
     "type": "git",
@@ -23,12 +24,14 @@
     "isomorphic-ws": "^4.0.1",
     "js-pixel-fonts": "^1.5.0",
     "pathfinding": "^0.4.18",
-    "long": "^5.2.0"
+    "long": "^5.2.0",
+    "command-line-args": "^5.2.1"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.6",
     "@types/node": "^18.6.1",
     "@types/pathfinding": "^0.0.5",
+    "@types/command-line-args": "^5.2.0",
     "typescript": "^4.7.2",
     "ts-node": "^10.9.1"
   }
