Clean up coffee

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Trinsic's digital assistant for gather! A metaverse cat-on-a-roomba!",
   "main": "index.ts",
   "scripts": {
-    "chase": "ts-node index.ts --chase --player \"JP\" --mewmba phillis --mewmba green",
-    "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\""
+    "chase": "ts-node index.ts --chase --player \"***RANDOM***\" --mewmba phillis --mewmba green",
+    "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\"",
+    "cleanup": "ts-node index.ts --cleanup --mewmba \"black\""
   },
   "repository": {
     "type": "git",
