Mewmba is a troll!

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "chase": "ts-node index.ts --chase --player \"***RANDOM***\" --mewmba phillis --mewmba green",
     "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\"",
-    "cleanup": "ts-node index.ts --cleanup --mewmba \"black\""
+    "cleanup": "ts-node index.ts --cleanup --mewmba \"black\"",
+    "jaws": "ts-node index.ts --jaws --mewmba \"black\""
   },
   "repository": {
     "type": "git",
