--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "chase": "ts-node index.ts --chase --player \"***RANDOM***\" --mewmba \"***RANDOM***\"",
     "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\"",
     "cleanup": "ts-node index.ts --cleanup --mewmba \"black\"",
-    "jaws": "ts-node index.ts --jaws --mewmba \"black\""
+    "jaws": "ts-node index.ts --jaws --mewmba \"black\"",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,19 +24,20 @@
   "dependencies": {
     "@gathertown/gather-game-client": "37.0.1",
     "@trinsic/trinsic": "1.8.0",
+    "command-line-args": "5.2.1",
     "isomorphic-ws": "5.0.0",
     "js-pixel-fonts": "1.6.0",
-    "pathfinding": "0.4.18",
     "long": "5.2.0",
-    "command-line-args": "5.2.1"
+    "pathfinding": "0.4.18"
   },
   "devDependencies": {
+    "@types/command-line-args": "5.2.0",
     "@types/google-protobuf": "3.15.6",
+    "@types/jest": "29.2.1",
     "@types/node": "18.11.9",
     "@types/pathfinding": "0.0.6",
-    "@types/command-line-args": "5.2.0",
-    "typescript": "4.8.4",
+    "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "ts-jest": "29.0.3"
+    "typescript": "4.8.4"
   }
 }
