--- a/.github/workflows/random-actions.yml
+++ b/.github/workflows/random-actions.yml
@@ -9,7 +9,7 @@ on:
       - main
 jobs:
   test:
-    name: Wander Around
+    name: Basic Functionality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
