--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\"",
     "cleanup": "ts-node index.ts --cleanup --mewmba \"black\"",
     "jaws": "ts-node index.ts --jaws --mewmba \"black\"",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc",
+    "prettier": "npx prettier ./src --write"
   },
   "repository": {
     "type": "git",
@@ -38,6 +40,7 @@
     "@types/pathfinding": "0.0.6",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "prettier": "2.7.1"
   }
 }
