--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,9 @@
   },
   "include": [
     "./src/**/*.ts",
+    "./src/*.ts",
+    "__tests__/*.ts",
     "*.ts"
-  ],
-  "exclude": [
-    "__tests__"
   ],
   "references": []
 }
