Exit on disconnect (#31)

--- a/.github/workflows/random-actions.yml
+++ b/.github/workflows/random-actions.yml
@@ -8,8 +8,8 @@ on:
     branches:
       - main
 jobs:
-  wander:
-    name: Wander Around
+  verify_formatting:
+    name: Verify Formatting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,18 +18,17 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
-      - run: |
-          npm install
-          npm run wander
-        name: Mewmba Wander
+      - name: Mewmba Test
+        run: |
+          npm ci
+          npm run prettier:check
         env:
           GATHER_SPACE_ID: ${{ secrets.GATHER_SPACE_ID }}
           GATHER_MAP_ID: ${{ secrets.GATHER_MAP_ID }}
           GATHER_API_KEY: ${{ secrets.GATHER_API_KEY }}
         shell: pwsh
-
-  cleanup:
-    name: Clean up Trash
+  test:
+    name: Basic Functionality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -38,10 +37,10 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
-      - run: |
-          npm install
-          npm run cleanup
-        name: Mewmba Wander
+      - name: Mewmba Test
+        run: |
+          npm ci
+          npm test
         env:
           GATHER_SPACE_ID: ${{ secrets.GATHER_SPACE_ID }}
           GATHER_MAP_ID: ${{ secrets.GATHER_MAP_ID }}
