--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     ]
   },
   "include": [
-    "./**/*.ts"
+    "./src/**/*.ts",
+    "./src/*.ts",
+    "__tests__/*.ts",
+    "*.ts"
   ],
   "references": []
 }
