--- a/.github/workflows/random-actions.yml
+++ b/.github/workflows/random-actions.yml
@@ -17,7 +17,7 @@ jobs:
         name: Setup Node v16
         with:
           node-version: 16
-          cache: 'npm'
+          cache: "npm"
       - name: Mewmba Test
         run: |
           npm ci
@@ -36,7 +36,7 @@ jobs:
         name: Setup Node v16
         with:
           node-version: 16
-          cache: 'npm'
+          cache: "npm"
       - name: Mewmba Test
         run: |
           npm ci
