--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "chase": "ts-node index.ts --chase --player \"***RANDOM***\" --mewmba \"***RANDOM***\"",
+    "nodemon:chase": "npx nodemon index.ts --chase --player \"***RANDOM***\" --mewmba \"***RANDOM***\"",
     "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\"",
     "cleanup": "ts-node index.ts --cleanup --mewmba \"black\"",
     "jaws": "ts-node index.ts --jaws --mewmba \"black\"",
@@ -28,6 +29,7 @@
     "@gathertown/gather-game-client": "37.0.1",
     "@trinsic/trinsic": "1.8.0",
     "@slack/bolt": "3.12.1",
+    "@octokit/request": "6.2.2",
     "command-line-args": "5.2.1",
     "isomorphic-ws": "5.0.0",
     "js-pixel-fonts": "1.6.0",
@@ -43,6 +45,7 @@
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "nodemon": "2.0.20"
   }
 }
