--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jaws": "ts-node index.ts --jaws --mewmba \"black\"",
     "test": "jest --watchAll=false",
     "build": "tsc",
-    "prettier:check": "npx prettier --check ./src ./__tests__",
+    "prettier:check": "npx prettier --check ./src ./__tests__ && npx eslint ./src",
     "prettier:write": "npx prettier --write ./src ./__tests__"
   },
   "repository": {
@@ -42,6 +42,7 @@
     "@types/jest": "29.2.1",
     "@types/node": "18.11.9",
     "@types/pathfinding": "0.0.6",
+    "eslint": "8.26.0",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
