--- a/.github/workflows/random-actions.yml
+++ b/.github/workflows/random-actions.yml
@@ -22,10 +22,6 @@ jobs:
         run: |
           npm ci
           npm run prettier:check
-        env:
-          GATHER_SPACE_ID: ${{ secrets.GATHER_SPACE_ID }}
-          GATHER_MAP_ID: ${{ secrets.GATHER_MAP_ID }}
-          GATHER_API_KEY: ${{ secrets.GATHER_API_KEY }}
         shell: pwsh
   test:
     name: Basic Functionality
@@ -46,4 +42,7 @@ jobs:
           GATHER_SPACE_ID: ${{ secrets.GATHER_SPACE_ID }}
           GATHER_MAP_ID: ${{ secrets.GATHER_MAP_ID }}
           GATHER_API_KEY: ${{ secrets.GATHER_API_KEY }}
+          SLACK_BOT_USER_OAUTH_TOKEN: ${{ secrets.SLACK_BOT_USER_OAUTH_TOKEN }}
+          SLACK_SOCKET_TOKEN: ${{ secrets.SLACK_SOCKET_TOKEN }}
+          GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
         shell: pwsh
