--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chase": "ts-node index.ts --chase --player \"***RANDOM***\" --mewmba \"***RANDOM***\"",
     "nodemon:chase": "npx nodemon index.ts --chase --player \"***RANDOM***\" --mewmba \"***RANDOM***\"",
     "wander": "ts-node index.ts --wander --mewmba \"***RANDOM***\"",
+    "nodemon:wander": "npx nodemon index.ts --wander --mewmba \"***RANDOM***\"",
     "cleanup": "ts-node index.ts --cleanup --mewmba \"black\"",
     "jaws": "ts-node index.ts --jaws --mewmba \"black\"",
     "test": "jest --watchAll=false",
@@ -27,7 +28,7 @@
   },
   "homepage": "https://github.com/trinsic-id/mewmba#readme",
   "dependencies": {
-    "@gathertown/gather-game-client": "37.0.1",
+    "@gathertown/gather-game-client": "38.0.1",
     "@octokit/request": "6.2.2",
     "@slack/bolt": "3.12.2",
     "@trinsic/trinsic": "1.8.0",
