--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -16,15 +16,13 @@ inputs:
   gitSha:
     # TODO - Figure out if this gets passed in
     description: 'githua.sha'
-    required: true
-  githubHeadRef:
+    required: false
+    default: ${{ github.event.pull_request_head.sha || github.sha }}
+  githubBranch:
     # TODO - Figure out if this gets passed in
     description: 'github.head_ref'
-    required: true
-  githubRefName:
-    # TODO - Figure out if this gets passed in
-    description: 'github.ref_name'
-    required: true
+    required: false
+    default: ${{ github.head_ref || github.ref_name }}
   githubRepository:
     description: 'Target repository for this PR'
     required: false
@@ -53,12 +51,16 @@ runs:
       uses: OleksiyRudenko/gha-git-credentials@v2
       with:
         token: ${{ inputs.apiGithubToken }}
+    - name: Git Short SHA
+      id: git-short-sha
+      run: |
+        echo "shortsha=$(git rev-parse --short ${{ inputs.gitSha }})" >> $env:GITHUB_OUTPUT
     - name: Create branch, pr, etc names
       id: create-names
       run: |
-        echo "newbranchname=mewmba/${{ inputs.githubHeadRef || inputs.githubRefName }}-${{ inputs.gitSha }}-generated-protos" >> $env:GITHUB_OUTPUT
-        echo "oldbranchname=${{ inputs.githubHeadRef || inputs.githubRefName }}" >> $env:GITHUB_OUTPUT
-        echo "defaultprtitle=Generated from ${{ steps.create-names.outputs.oldbranchname }}-${{ inputs.gitSha }}" >> $env:GITHUB_OUTPUT
+        echo "newbranchname=mewmba/${{ inputs.githubBranch }}-${{ steps.git-short-sha.shortsha }}-generated-protos" >> $env:GITHUB_OUTPUT
+        echo "oldbranchname=${{ inputs.githubBranch }}" >> $env:GITHUB_OUTPUT
+        echo "defaultprtitle=Generated from ${{ steps.create-names.outputs.oldbranchname }}-${{ steps.git-short-sha.shortsha }}" >> $env:GITHUB_OUTPUT
         echo "defaultprbody=:rocket: Generated from ${{ steps.create-names.outputs.oldbranchname }} at commit SHA ${{ inputs.gitSha }}" >> $env:GITHUB_OUTPUT
       shell: pwsh
 
@@ -68,9 +70,10 @@ runs:
       with:
         author_name: Mewmba
         author_email: mewmba@trinsic.id
-        message: 'Generated code from proto files on branch ${{ steps.create-names.outputs.oldbranchname }}, commit SHA ${{ inputs.gitSha }}'
+        message: 'Generated code and changes from branch ${{ steps.create-names.outputs.oldbranchname }}, commit SHA ${{ steps.git-short-sha.shortsha }}'
         new_branch: ${{ steps.create-names.outputs.newbranchname }}
         push: '--force --set-upstream origin ${{ steps.create-names.outputs.newbranchname  }}'
+        cwd: ${{ github.workspace }}/${{ inputs.githubWorkingDirectory }}
 
     # TODO - Can we switch to github API?
     - name: pull-request
