--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -55,6 +55,7 @@ runs:
       id: git-short-sha
       run: |
         echo "shortsha=$(git rev-parse --short ${{ inputs.gitSha }})" >> $env:GITHUB_OUTPUT
+      shell: pwsh
     - name: Create branch, pr, etc names
       id: create-names
       run: |
