--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -51,15 +51,19 @@ runs:
       id: git-short-sha
       run: |
         echo "shortsha=$(echo ${{ inputs.gitSha}} | cut -b 1-8)" >> $env:GITHUB_OUTPUT
-      shell: pwsh
+      shell: bash
     - name: Create branch, pr, etc names
       id: create-names
       run: |
         echo "newbranchname=mewmba/${{ inputs.githubBranch }}-${{ steps.git-short-sha.shortsha }}-generated-protos" >> $env:GITHUB_OUTPUT
         echo "oldbranchname=${{ inputs.githubBranch }}" >> $env:GITHUB_OUTPUT
+      shell: bash
+    - name: Default PR title, body
+      id: default-pr
+      run: |
         echo "defaultprtitle=Generated from ${{ steps.create-names.outputs.oldbranchname }}-${{ steps.git-short-sha.shortsha }}" >> $env:GITHUB_OUTPUT
         echo "defaultprbody=:rocket: Generated from ${{ steps.create-names.outputs.oldbranchname }} at commit SHA ${{ inputs.gitSha }}" >> $env:GITHUB_OUTPUT
-      shell: pwsh
+      shell: bash
 
     - name: Commit changes
       uses: EndBug/add-and-commit@v9
