--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -50,18 +50,18 @@ runs:
     - name: Git Short SHA
       id: git-short-sha
       run: |
-        echo "shortsha=$(echo ${{ inputs.gitSha}} | cut -b 1-8)" >> $env:GITHUB_OUTPUT
+        echo "shortsha=$(echo ${{ inputs.gitSha }} | cut -b 1-8)" >> $env:GITHUB_OUTPUT
       shell: bash
     - name: Create branch, pr, etc names
       id: create-names
       run: |
-        echo "newbranchname=mewmba/${{ inputs.githubBranch }}-${{ steps.git-short-sha.shortsha }}-generated-protos" >> $env:GITHUB_OUTPUT
+        echo "newbranchname=mewmba/${{ inputs.githubBranch }}-${{ steps.git-short-sha.outputs.shortsha }}-generated-protos" >> $env:GITHUB_OUTPUT
         echo "oldbranchname=${{ inputs.githubBranch }}" >> $env:GITHUB_OUTPUT
       shell: bash
     - name: Default PR title, body
       id: default-pr
       run: |
-        echo "defaultprtitle=Generated from ${{ steps.create-names.outputs.oldbranchname }}-${{ steps.git-short-sha.shortsha }}" >> $env:GITHUB_OUTPUT
+        echo "defaultprtitle=Generated from ${{ steps.create-names.outputs.oldbranchname }}-${{ steps.git-short-sha.outputs.shortsha }}" >> $env:GITHUB_OUTPUT
         echo "defaultprbody=:rocket: Generated from ${{ steps.create-names.outputs.oldbranchname }} at commit SHA ${{ inputs.gitSha }}" >> $env:GITHUB_OUTPUT
       shell: bash
 
@@ -71,7 +71,7 @@ runs:
       with:
         author_name: Mewmba
         author_email: mewmba@trinsic.id
-        message: 'Generated code and changes from branch ${{ steps.create-names.outputs.oldbranchname }}, commit SHA ${{ steps.git-short-sha.shortsha }}'
+        message: 'Generated code and changes from branch ${{ steps.create-names.outputs.oldbranchname }}, commit SHA ${{ steps.git-short-sha.outputs.shortsha }}'
         new_branch: ${{ steps.create-names.outputs.newbranchname }}
         push: '--force --set-upstream origin ${{ steps.create-names.outputs.newbranchname  }}'
         cwd: ${{ github.workspace }}/${{ inputs.githubWorkingDirectory }}
