--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -88,7 +88,7 @@ runs:
                      --base "${{ steps.create-names.outputs.oldbranchname }}" `
                      --title "${{ inputs.prTitle || steps.create-names.defaultprtitle }}" `
                      --body "${{ inputs.prBody || steps.create-names.defaultprbody }}" `
-                     --repo "${{ inputs.githubRepository }}"
+                     --repo "${{ inputs.githubRepository }}" `
                      --assignee "${{ inputs.githubAssignee }}"
       shell: pwsh
       working-directory: ${{ github.workspace }}/${{ inputs.githubWorkingDirectory }}
