--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -79,6 +79,10 @@ runs:
         directory: '${{ github.workspace }}/${{ inputs.githubWorkingDirectory }}'
         repository: ${{ inputs.githubRepository }}
         force: true
+        
+    - name: Fix ownership
+      run: |
+        git config --global --add safe.directory ${{ github.workspace }}/${{ inputs.githubWorkingDirectory }}
 
     - name: Create Pull Request
       id: create-pr
