--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -83,6 +83,7 @@ runs:
     - name: Fix ownership
       run: |
         git config --global --add safe.directory ${{ github.workspace }}/${{ inputs.githubWorkingDirectory }}
+        git config --global --add safe.directory /github/workspace/${{ inputs.githubWorkingDirectory }}
       shell: pwsh
 
     - name: Create Pull Request
