--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -35,15 +35,14 @@ inputs:
     default: ''
   
 outputs:
-  # TODO - Show more outputs as needed
   prOperation:
-    description: 'Operation on the pull request'
+    description: 'The pull request operation performed by the action, `created`, `updated`, or `closed`.'
     value: ${{ steps.create-pr.outputs.pull-request-operation }}
   prNumber:
-    description: 'Number of the PR created'
+    description: 'The pull request number.'
     value: ${{ steps.create-pr.outputs.pull-request-number }}
   prUrl:
-    description: 'URL to PR review'
+    description: 'The URL of the pull request.'
     value: ${{ steps.create-pr.outputs.pull-request-url }}
 
 runs:
