--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: 'PR Description'
     required: false
     default: ''
+  commitMessage:
+    description: 'Git Commit message (extract PR title from first line)'
+    required: false
+    default: ''
   gitSha:
     description: 'github.sha'
     required: false
@@ -62,8 +66,14 @@ runs:
     - name: Default PR title, body
       id: default-pr
       run: |
+        $gitcommit = @'
+        ${{ inputs.commitMessage }}
+        '@
+        $gitlines = $gitcommit.Split("`r`n")
         echo "defaultprtitle=Generated from ${{ steps.create-names.outputs.oldbranchname }}-${{ steps.git-short-sha.outputs.shortsha }}" >> $env:GITHUB_OUTPUT
         echo "defaultprbody=:rocket: Generated from ${{ steps.create-names.outputs.oldbranchname }} at commit SHA ${{ inputs.gitSha }}" >> $env:GITHUB_OUTPUT
+        echo "commitprtitle=$($gitlines[0])" >> $env:GITHUB_OUTPUT
+        echo "commitprbody=$gitcommit" >> $env:GITHUB_OUTPUT
       shell: pwsh
 
     - name: Create Pull Request
@@ -78,6 +88,6 @@ runs:
         branch: ${{ steps.create-names.outputs.newbranchname }}
         delete-branch: true
         base: ${{ steps.create-names.outputs.oldbranchname }}
-        title: ${{ inputs.prTitle || steps.create-names.defaultprtitle }}
-        body: ${{ inputs.prBody || steps.create-names.defaultprbody }}
+        title: ${{ inputs.prTitle || steps.create-names.commitprtitle || steps.create-names.defaultprtitle }}
+        body: ${{ inputs.prBody || steps.create-names.commitprbody || steps.create-names.defaultprbody }}
         reviewers: ${{ inputs.githubAssignee }}
