--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -88,6 +88,6 @@ runs:
         branch: ${{ steps.create-names.outputs.newbranchname }}
         delete-branch: true
         base: ${{ steps.create-names.outputs.oldbranchname }}
-        title: ${{ inputs.prTitle || steps.default-pr.commitprtitle || steps.default-pr.defaultprtitle }}
-        body: ${{ inputs.prBody || steps.default-pr.commitprbody || steps.default-pr.defaultprbody }}
+        title: ${{ inputs.prTitle || steps.default-pr.output.commitprtitle || steps.default-pr.output.defaultprtitle }}
+        body: ${{ inputs.prBody || steps.default-pr.output.commitprbody || steps.default-pr.output.defaultprbody }}
         reviewers: ${{ inputs.githubAssignee }}
