--- a/actions/mewmba-pr/action.yml
+++ b/actions/mewmba-pr/action.yml
@@ -70,6 +70,8 @@ runs:
         ${{ inputs.commitMessage }}
         '@
         $gitlines = $gitcommit.Split("`r`n")
+        $gittitle = $gitlines[0]
+        $gittitle = $gittitle.Substring(0,[math]::Min($gittitle.Length,64))
         echo "defaultprtitle=Generated from ${{ steps.create-names.outputs.oldbranchname }}-${{ steps.git-short-sha.outputs.shortsha }}" >> $env:GITHUB_OUTPUT
         echo "defaultprbody=:rocket: Generated from ${{ steps.create-names.outputs.oldbranchname }} at commit SHA ${{ inputs.gitSha }}" >> $env:GITHUB_OUTPUT
         echo "commitprtitle=$($gitlines[0])" >> $env:GITHUB_OUTPUT
